src/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", system-ui;
}

body {
  background: #f4f3f7;
  overflow-x: hidden;
  color: #2d2a2a;
}

nav {
  padding: 20px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.45);
  margin-bottom: 0;
}

.logo-img {
  width: 90px;
  cursor: pointer;
}

.about-container {
  background: radial-gradient(
    circle at 30% 107%,
    #fdf497 0%,
    #fdf497 5%,
    #fd5949 45%,
    #d6249f 60%,
    #285aeb 90%
  );
}

.about {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-top: 50px;
  padding-bottom: 50px;
  color: white;
}

.info-btn {
  color: #2d2a2a;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 5px;
  font-size: 1.2rem;
  font-weight: 600;
  height: 2em;
  padding-left: 10px;
  padding-right: 10px;
  background: white;
  border: 2px solid white;
  border-radius: 10px;
  border: 2px solid transparent;
  cursor: pointer;
}

.info-btn:hover {
  background: transparent;
  border: 2px solid white;
  color: white;
}

.upload-title {
  display: block;
  margin-top: 20px;
}

.titles {
  font-size: 1.4rem;
  font-weight: 500;
  color: #2d2a2a;
}

.emfasis {
  font-weight: 700;
  text-decoration: underline;
  font-size: 1.5rem;
}

.file {
  display: none;
}

.file-name {
  position: relative;
  overflow: hidden;
  line-height: 30px;
  padding: 5px;
  box-sizing: border-box;
  font-size: 15px;
  vertical-align: middle;
  width: 400px;
  border: 2px solid #dbdbdb;
  border-radius: 0;
  height: calc(2em + 0.75rem + 2px);
  color: #2d2a2a;
}

.btn {
  background: #2d2a2a;
  border: none;
  border-radius: 0;
  width: 100px;
  box-sizing: border-box;
  padding: 2px 10px;
  background-color: #2d2a2a;
  transition: all 0.6s;
  color: #fff;
  font-size: 15px;
  vertical-align: middle;
  text-transform: uppercase;
  margin-left: 1rem;
  cursor: pointer;
  height: 2.5em;
}

.btn:hover {
  color: #f4f3f7;
}

.file-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  margin-top: 15px;
}

.choosing-file-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 100px;
  margin-bottom: 30px;
}

.main-title {
  font-size: 1.7rem;
  font-weight: 600;
  text-align: center;
  margin-top: -20px;
}

.insta-logo-gif {
  width: 150px;
}

.upload-divs {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button-proc {
  position: relative;
  font-size: 14px;
  letter-spacing: 3px;
  height: 3em;
  padding: 0 3em;
  border: none;
  background-color: #f04765;
  color: #fff;
  text-transform: uppercase;
  overflow: hidden;
  border-radius: 5px;
  cursor: pointer;
  margin-top: 10px;
  margin-bottom: -20px;
}

.button-proc::before {
  content: "";
  display: block;
  position: absolute;
  z-index: 0;
  bottom: 0;
  left: 0;
  height: 0px;
  width: 100%;
  background: linear-gradient(90deg, #f04765 20%, #9c2b40 100%);
  transition: 0.2s;
}

.button-proc .label {
  position: relative;
}

.button-proc .icon {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 3em;
  width: 3em;
  position: absolute;
  top: 3em;
  right: 0;
  opacity: 0;
  transition: 0.4s;
}

.button-proc:hover::before {
  height: 100%;
}

.button-proc:hover .icon {
  top: 0;
  opacity: 1;
}

.landing-divs-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  gap: 1%;

  margin: 7vw;
  margin-top: 80px;
}

.facts-div {
  background-color: white;
  height: 310px;
  width: 400px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
  padding: 40px;
  border-radius: 20px;
}

.facts-div:hover {
  box-shadow: 0px 20px 36px -12px rgba(35, 36, 176, 0.13);
  cursor: pointer;
}

.facts-title {
  margin-top: 30px;
}

.facts-subtitle {
  text-align: center;
  margin-top: 20px;
  font-size: 0.9rem;
}

.prolog-about {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-top: 80px;
  gap: 30px;
}

.prolog-text {
  width: 50vw;
  text-align: center;
  font-weight: 300;
}

.finder {
  color: #666262b9;
}

.results {
  margin-bottom: -50px;
}

.footer-global {
  background: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 30px;
  color: #2d2a2a;
  padding: 20px;
}

.copyright-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 5px;
}

.copyright {
  font-size: 1rem;
  font-weight: 400;
}

.link-portfolio {
  color: #2d2a2a;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
}

.source-link {
  color: #2d2a2a;
  text-decoration: none;
  font-size: 1rem;
  font-weight: 400;
}

.github-div {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  gap: 10px;
  cursor: pointer;
}

.git-img {
  color: #2d2a2a;
}

.landingInfo-out {
  animation: goingOut 500ms ease-in forwards;
}

@keyframes goingOut {
  0% {
    -webkit-transform: translateX(0vw);
    transform: translateX(0vw);
  }
  100% {
    -webkit-transform: translateX(-100vw);
    transform: translateX(-100vw);
  }
}

.finder-div {
  animation: goingIn 500ms ease-in forwards;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  gap: 1%;
  margin: 7vw;
  margin-top: 80px;
  opacity: 0;
}

@keyframes goingIn {
  100% {
    opacity: 1;
  }
}

.finder-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 50px;
}

.prolog-finder {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 30px;
}

table {
  margin-top: 30px;
  background: radial-gradient(
    circle at 4% 107%,
    rgba(252, 239, 95, 0.9) 0%,

    hsl(5, 98%, 64%, 0.9) 35%,
    hsl(319, 71%, 49%, 0.8) 60%
  );
  background-attachment: fixed;
  border-radius: 15px;
  padding: 20px;
  color: white;
}

td {
  text-align: center;
  padding: 20px;
  background-color: rgba(255, 255, 255, 0.11);
  color: white;
}

td:first-child {
  font-weight: 700;
}

td:last-child {
  padding: 0;
}

th {
  padding-bottom: 10px;
  font-size: 1.2rem;
  font-weight: bolder;
  color: white;
  width: 40vw;
  font-weight: 700;
  white-space: nowrap;
}

th:first-child {
  width: 10vw;
}

.error-text {
  background: #ed1c24;
  color: white;
  padding: 8px;
  border-radius: 5px;
  font-size: 0.9rem;
  text-align: center;
}

.profile-link {
  color: white;
  text-decoration: none;
  background: linear-gradient(to right, rgb(255, 255, 255), rgb(163, 221, 221)),
    linear-gradient(
      to right,
      rgba(255, 0, 0, 1),
      rgba(255, 0, 180, 1),
      rgba(0, 100, 200, 1)
    );
  background-size: 100% 3px, 0 3px;
  background-position: 100% 100%, 0 100%;
  background-repeat: no-repeat;
  transition: background-size 400ms;
}

a:hover {
  background-size: 0 3px, 100% 3px;
}

.unfollowers-list h1 {
  text-align: center;
}

.help-div {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  gap: 1%;
  margin: 7vw;
  margin-top: 80px;
}

.help-div h1 {
  text-align: center;
}

.help-div a {
  color: #2d2a2a;
}

.help-methods {
  margin-top: 50px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  background: #ffffff;
}

.help-title-div {
  background: #f04765;
  color: white;
  padding: 10px;
  width: 100%;
}

.help-methods ol {
  margin: 40px;
}

.help-methods p {
  margin: 20px;
}

li {
  font-size: 1.1rem;
  margin-bottom: 15px;
}

.help-source {
  display: flex;
  flex-direction: row;
  gap: 5px;
}

@media all and (max-width: 500px) {
  .logo-img {
    width: 80px;
  }

  .prolog-text {
    margin-top: -15px;
    width: 90vw;
  }

  .prolog-about {
    margin-top: 50px;
  }

  .landing-divs-wrapper {
    flex-direction: column;
    gap: 40px;
    margin-top: 50px;
  }

  .choosing-file-div {
    flex-direction: column;
    gap: 30px;
  }

  .upload-title {
    display: block;
    margin-top: 20px;
    text-align: center;
  }

  .file-name {
    width: 61vw;
  }

  .main-title {
    font-size: 1.2rem;
  }

  .insta-logo-gif {
    width: 120px;
    margin-bottom: 10px;
  }

  .titles {
    font-size: 1.1rem;
  }

  .emfasis {
    font-size: 1.125rem;
  }

  .unfollowers-list {
    margin-top: -30px;
  }

  .unfollowers-list h1 {
    font-size: 1.4rem;
    margin-bottom: 40px;
  }

  .help-div h1 {
    font-size: 1.4rem;
    white-space: nowrap;
    margin-top: -30px;
  }

  .prolog-finder {
    margin-top: -20px;
  }

  .button-proc {
    margin-bottom: -20px;
  }

  .prolog-title {
    margin-top: -8px;
    font-size: 1.8rem;
  }

  .finder-title {
    margin-top: -20px;
    font-size: 1.7rem;
  }

  .finder {
    font-weight: 200;
    margin-top: -30px;
    margin-bottom: -10px;
  }

  .results {
    margin-top: -20px;
    margin-bottom: 20px;
  }

  .help-title-div h2 {
    font-size: 1.2rem;
  }

  .help-methods ol {
    margin: 40px;
  }

  .help-methods p {
    margin: 20px;
  }

  li {
    font-size: 1rem;
    margin-bottom: 15px;
  }

  li:first-child {
    margin-top: -10px;
  }

  .help-title-div {
    width: 95vw;
  }

  table {
    width: 98vw;
    padding: 10px;
  }

  th {
    font-size: 1rem;
  }
}

